--- a/COVID19_TRAFFIC_TEST_another_one.ipynb
+++ b/COVID19_TRAFFIC_TEST_another_one.ipynb
@@ -39,10 +39,10 @@
       "metadata": {
         "id": "WTIlHXxMxqQf",
         "colab_type": "code",
-        "outputId": "d4385ec4-536e-4372-991e-c7b116199720",
+        "outputId": "a8423f33-c6da-46fd-b73b-7f74b8f5dc5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 34
         }
       },
       "source": [
@@ -53,16 +53,12 @@
         "\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -73,7 +69,7 @@
       "metadata": {
         "id": "1vvMBltuyZeF",
         "colab_type": "code",
-        "outputId": "2b2b7d6a-5455-4e7b-f987-aaec91ef43fb",
+        "outputId": "ecbfd9a5-2aac-4df2-bce0-e1270a87437d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -82,7 +78,7 @@
       "source": [
         "cd /content/gdrive/'My Drive'/tmp/\n"
       ],
-      "execution_count": 3,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,16 +126,16 @@
       "metadata": {
         "id": "KRb3tcDp-wrI",
         "colab_type": "code",
+        "outputId": "3779d049-e1b8-4911-ebf4-66ef721012bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "13a24ef4-f4c8-4e9b-feb7-6bbeeb191041"
+        }
       },
       "source": [
-        "cd vehicle_counting_tensorflow/"
+        "cd /content/gdrive/'My Drive'/tmp/vehicle_counting_tensorflow/"
       ],
-      "execution_count": 6,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +160,7 @@
       "source": [
         "!python3 vehicle_detection_main.py ../DATASET/1579442319_200119_0854_SCAN_day/1579442055_KCAM001.ts 2> /dev/null"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,70 +176,68 @@
       "metadata": {
         "id": "L23iRGg0_yGU",
         "colab_type": "code",
+        "outputId": "2401a2fb-8f79-4cf2-f9a4-b56e2df65316",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 905
-        },
-        "outputId": "2da4f67e-7e7c-4e53-af6e-bffb2a880d9f"
+          "height": 121
+        }
       },
       "source": [
-        "pwd"
+        "cat run_day.sh"
       ],
-      "execution_count": 8,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2020-05-08 20:34:43.573279: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "non-resource variables are not supported in the long term\n",
-            "2020-05-08 20:34:46.457694: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcuda.so.1\n",
-            "2020-05-08 20:34:46.483204: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.483799: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1561] Found device 0 with properties: \n",
-            "pciBusID: 0000:00:04.0 name: Tesla P4 computeCapability: 6.1\n",
-            "coreClock: 1.1135GHz coreCount: 20 deviceMemorySize: 7.43GiB deviceMemoryBandwidth: 178.99GiB/s\n",
-            "2020-05-08 20:34:46.483861: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
-            "2020-05-08 20:34:46.485467: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcublas.so.10\n",
-            "2020-05-08 20:34:46.486958: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcufft.so.10\n",
-            "2020-05-08 20:34:46.487276: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcurand.so.10\n",
-            "2020-05-08 20:34:46.488773: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcusolver.so.10\n",
-            "2020-05-08 20:34:46.489575: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcusparse.so.10\n",
-            "2020-05-08 20:34:46.492487: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudnn.so.7\n",
-            "2020-05-08 20:34:46.492611: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.493204: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.493787: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1703] Adding visible gpu devices: 0\n",
-            "2020-05-08 20:34:46.498577: I tensorflow/core/platform/profile_utils/cpu_utils.cc:102] CPU Frequency: 2200000000 Hz\n",
-            "2020-05-08 20:34:46.498776: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1e5db80 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-            "2020-05-08 20:34:46.498805: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
-            "2020-05-08 20:34:46.585150: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.585652: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1e5ca00 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-            "2020-05-08 20:34:46.585683: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Tesla P4, Compute Capability 6.1\n",
-            "2020-05-08 20:34:46.585899: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.586247: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1561] Found device 0 with properties: \n",
-            "pciBusID: 0000:00:04.0 name: Tesla P4 computeCapability: 6.1\n",
-            "coreClock: 1.1135GHz coreCount: 20 deviceMemorySize: 7.43GiB deviceMemoryBandwidth: 178.99GiB/s\n",
-            "2020-05-08 20:34:46.586291: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
-            "2020-05-08 20:34:46.586347: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcublas.so.10\n",
-            "2020-05-08 20:34:46.586370: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcufft.so.10\n",
-            "2020-05-08 20:34:46.586392: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcurand.so.10\n",
-            "2020-05-08 20:34:46.586431: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcusolver.so.10\n",
-            "2020-05-08 20:34:46.586452: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcusparse.so.10\n",
-            "2020-05-08 20:34:46.586473: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudnn.so.7\n",
-            "2020-05-08 20:34:46.586554: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.586954: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:46.587266: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1703] Adding visible gpu devices: 0\n",
-            "2020-05-08 20:34:46.587313: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudart.so.10.1\n",
-            "2020-05-08 20:34:47.068180: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1102] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
-            "2020-05-08 20:34:47.068248: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1108]      0 \n",
-            "2020-05-08 20:34:47.068265: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1121] 0:   N \n",
-            "2020-05-08 20:34:47.068505: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:47.068969: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:981] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-            "2020-05-08 20:34:47.069335: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
-            "2020-05-08 20:34:47.069385: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1247] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 6966 MB memory) -> physical GPU (device: 0, name: Tesla P4, pci bus id: 0000:00:04.0, compute capability: 6.1)\n",
-            "2020-05-08 20:34:48.901656: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcudnn.so.7\n",
-            "2020-05-08 20:34:49.934525: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library libcublas.so.10\n",
-            "./DATASET/1579442319_200119_0854_SCAN_day/*.ts 5\n"
+            "FILES=../DATASET/1579442319_200119_0854_SCAN_day/*.ts\n",
+            "for f in $FILES\n",
+            "do\n",
+            "    # echo $f\n",
+            "    python3 vehicle_detection_main.py $f 2> /dev/null\n",
+            "done\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vcDaoT0JBkVZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!chmod a+x run_day.sh"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kHQPY2foBrBC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "outputId": "b84f2e6a-5d20-40e6-f2c9-46c59bf23e62"
+      },
+      "source": [
+        "!bash ./run_day.sh"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "../DATASET/1579442319_200119_0854_SCAN_day/1579442055_KCAM001.ts 5\n",
+            "../DATASET/1579442319_200119_0854_SCAN_day/1579442057_KCAM002.ts 5\n",
+            "../DATASET/1579442319_200119_0854_SCAN_day/1579442059_KCAM003.ts 5\n",
+            "../DATASET/1579442319_200119_0854_SCAN_day/1579442060_KCAM004.ts 5\n",
+            "../DATASET/1579442319_200119_0854_SCAN_day/1579442061_KCAM005.ts 5\n"
           ],
           "name": "stdout"
         }
